# DoDiDone

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Makefile  Readme.md  cmake_install.cmake  consoleLaunch.sh  e-chess.cbp  install.sh  log.txt  tmpLog.txt
cmake_modules/: FindSFML.cmake
docs/: brain storming.txt
documentation/html/: _a_i_8h.html  _a_i_8h.js  _a_i_8h__dep__incl.map  _a_i_8h__dep__incl.md5  _a_i_8h__incl.map  _a_i_8h__incl.md5  _a_i_8h_source.html  _bishop_8h.html  _bishop_8h__incl.map  _bishop_8h__incl.md5  _bishop_8h_source.html  _button_8h.html  _button_8h__dep__incl.map  _button_8h__dep__incl.md5  _button_8h__incl.map  _button_8h__incl.md5  _button_8h_source.html  _chessboard_8h.html  _chessboard_8h.js  _chessboard_8h__dep__incl.map  _chessboard_8h__dep__incl.md5  _chessboard_8h__incl.map  _chessboard_8h__incl.md5  _chessboard_8h_source.html  _clickable_element_8h.html  _clickable_element_8h__dep__incl.map  _clickable_element_8h__dep__incl.md5  _clickable_element_8h__incl.map  _clickable_element_8h__incl.md5  _clickable_element_8h_source.html  _game_constants_8h.html  _game_constants_8h.js  _game_constants_8h__dep__incl.map  _game_constants_8h__dep__incl.md5  _game_constants_8h__incl.map  _game_constants_8h__incl.md5  _game_constants_8h_source.html  _game_controller_8h.html  _game_controller_8h__dep__incl.map  _game_controller_8h__dep__incl.md5  (+184 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+61 more)
documentation/latex/: _a_i_8h.tex  _a_i_8h__dep__incl.md5  _a_i_8h__incl.md5  _bishop_8h.tex  _bishop_8h__incl.md5  _button_8h.tex  _button_8h__dep__incl.md5  _button_8h__incl.md5  _chessboard_8h.tex  _chessboard_8h__dep__incl.md5  _chessboard_8h__incl.md5  _clickable_element_8h.tex  _clickable_element_8h__dep__incl.md5  _clickable_element_8h__incl.md5  _game_constants_8h.tex  _game_constants_8h__dep__incl.md5  _game_constants_8h__incl.md5  _game_controller_8h.tex  _game_controller_8h__dep__incl.md5  _game_controller_8h__incl.md5  _graphic_element_8h.tex  _graphic_element_8h__dep__incl.md5  _graphic_element_8h__incl.md5  _king_8h.tex  _king_8h__incl.md5  _knight_8h.tex  _knight_8h__incl.md5  _pawn_8h.tex  _pawn_8h__dep__incl.md5  _pawn_8h__incl.md5  _piece_8h.tex  _piece_8h__dep__incl.md5  _piece_8h__incl.md5  _point2_i_8h.tex  _point2_i_8h__dep__incl.md5  _point2_i_8h__incl.md5  _queen_8h.tex  _queen_8h__incl.md5  _tower_8h.tex  _tower_8h__incl.md5  (+42 more)
files/backup/: save.txt
include/: ia.h
include/controller/: GameController.h
include/model/: Bishop.h  Chessboard.h  GameConstants.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Tower.h  constantesDeplacement.h
include/service/: AI.h
include/view/: Button.h  ClickableElement.h  GraphicElement.h  LoadGameButton.h  NewGameButton.h  OnePlayerButton.h  Point2I.h  SaveGameButton.h  SquareButton.h  TwoPlayersButton.h  View.h
src/: main.cpp
src/controller/: GameController.cpp
src/engine/: board.cpp  move.cpp
src/model/: Bishop.cpp  Chessboard.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Tower.cpp
src/service/: AI.cpp
src/view/: Button.cpp  ChessGame.cpp  ClickableElement.cpp  GraphicElement.cpp  LoadGameButton.cpp  NewGameButton.cpp  OnePlayerButton.cpp  Point2I.cpp  SaveGameButton.cpp  SquareButton.cpp  TwoPlayersButton.cpp  View.cpp
tests/: CMakeLists.txt  TestChessboard.cpp  TestChessboard.h
